--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "css-loader": "^0.26.1",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "muse-ui": "^2.0.0-rc.5",
     "vue": "^2.1.10",
-    "vue-router": "^2.2.0",
     "vue-resource": "^1.2.0",
-    "vuex": "^2.0.0",
-    "muse-ui": "^2.0.0-rc.5"
+    "vue-router": "^2.2.0",
+    "vue-style-loader": "^2.0.0",
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -55,7 +59,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "less": "^2.7.2"
   },
   "engines": {
     "node": ">= 4.0.0",
