--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "muse-ui": "^2.0.0-rc.5",
+    "net": "^1.0.2",
     "vue": "^2.1.10",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0",
